on met dans un fichier de config le chemin des resx

--- a/TomTraduction/appsettings.json
+++ b/TomTraduction/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Translation": {
+    "ResourcesBasePath": "C:\\Users\\jordantemp\\projet\\tomweb"
+  }
 }
